--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@uploadthing/react": "^6.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "jwt-decode": "^4.0.0",
     "livekit-client": "^1.15.11",
     "livekit-server-sdk": "^1.2.7",
